# cake-profiler

./: CMakeLists.txt  Dockerfile  Jenkinsfile  README.MD
include/: cake.h  cakedef.h  logger.h  poc.h  pocdef.h  profiler.h  profilercontainer.h  profilermanager.h  triviallogger.h
src/: profiler.cpp  profilercontainer.cpp  profilermanager.cpp  triviallogger.cpp
test/: CMakeLists.txt  test.cpp  unittest.cpp
